--- a/D3.2/D3.2_codesign.tex
+++ b/D3.2/D3.2_codesign.tex
@@ -157,28 +157,14 @@ the problem is partitioned across devices.
 
 \label{sec:tinytc}
 
-A different route to performance portability is offered by the use of domain-specific languages (DSL). In contrast to general purpose languages which are meant to be broadly applicable across different computing fields, DSLs are designed to be specialized to a particular domain.
+The Tiny Tensor Compiler (TinyTC) is an open-source tensor compiler developed by Intel for efficient execution of tensor computations on CPUs and GPUs. TinyTC compiles programs written in a domain-specific tensor language into OpenCL-C or SPIR-V, supporting runtime environments such as OpenCL, Level Zero, and SYCL. C and C++ APIs are available. TinyTC assumes a batched execution model, where each kernel is executed by a work-group with concurrent work-items, and the compiler maps tensor operations to efficient GPU instructions, including cooperative GEMMs and subgroup vectorization. Further details of the execution model and available instructions can be found in the online documentation \footnote{\url{https://intel.github.io/tiny-tensor-compiler/manual/tensor-ir.html}, accessed on 25.08.2028}
 
-The use of DSLs in the context of finite element methods is not new.
-Notable "high-level" DSLs in this space include FreeFem++ and UML (part of tge FEniCS project).
-These languages have been designed for the declaration of finite element discretizations in variational form, offering a 
-a flexible way of defining expressions in weak form and selecting finite element spaces. 
-The definition of the problem in variational form is then handed to the domain specific compiler, which typically generates output in C (potentially including SIMD intrinsics) or another intermediate representation (e.g. LLVM IR). 
+Domain-specific languages (DSLs) provide abstraction and performance portability by expressing operations in a form closer to the mathematical problem rather than low-level loops. In recent years, DSLs such as FreeFem++ or FEniCS UML allow variational forms to be compiled into optimized C or LLVM IR. Similarly, TinyTC aims to represent tensor operations, representing multi-dimensional contractions, fusions, and GEMMs in a dedicated tensor language, but remains unaware of finite element specifics.
 
-Recently, Intel has developed the Tiny Tensor Compiler (TinyTC).
-This tool accepts sub-programs, also called \textit{kernels}, written in "tensor language" and translates them to OpenCL-C and/or SPIR-V. 
-The translated programs can be loaded from programs written using the OpenCL, Level Zero or SYCL frameworks, 
-and executued on GPU and CPU devices.
-Both C and C++ APIs are supported.
+Our first test of TinyTC aims to accelerate the finite element mass matrix evaluation (BK1) using sum factorization. As a first demonstration of tensor language we present the BK1 kernel using algorithm presented by Świrydowicz et al. (2019), see Listing \ref{lst:tinytc}, where each tensor product is implemented using the loop over GEMM approach. For simplicity the implementation uses four temporary arrays \texttt{wsp0}-\texttt{wsp4} are allocated in local work-group storage.
 
-The Tiny Tensor Compiler (TinyTC) is an open-source tensor compiler developed by Intel for efficient execution of tensor computations on CPUs and GPUs. TinyTC compiles programs written in a specialized tensor language into OpenCL-C or SPIR-V, supporting runtime environments such as OpenCL, Level Zero, and SYCL. C and C++ APIs are available. TinyTC assumes a batched execution model, where each kernel is executed by a work-group with concurrent work-items, and the compiler maps tensor operations to efficient GPU instructions, including cooperative GEMMs and subgroup vectorization. Further details of the execution model and available instructions can be found in the online documentation \footnote{\url{https://intel.github.io/tiny-tensor-compiler/manual/tensor-ir.html}, accessed on 25.08.2028}
-
-
-Our first test of TinyTC aims to accelerate the finite element mass matrix evaluation (BK1) using sum factorization. Following the CEED benchmark description, the kernel assumes a  
-As a first demonstration of tensor language we the BK1 kernel using a naive algorithm, where
-each tensor product has been translated using the "loop over GEMM" approach. 
-
-\begin{lstlisting}[language=TensorIR,caption={BK1 using Tensor IR},basicstyle=\ttfamily\tiny]
+\begin{lstlisting}[language=TensorIR,caption={BK1 using Tensor IR},basicstyle=\ttfamily\tiny,
+                   label={lst:tinytc}]
 func @sum_factorization(%basis0: memref<f32x3x4>,
                         %basis1: memref<f32x3x4>,
                         %basis2: memref<f32x3x4>,
@@ -199,29 +185,23 @@ func @sum_factorization(%basis0: memref<f32x3x4>,
     %out_e = subview %out[:,:,:,%gid] : memref<f32x3x3x3x?>;
 
     for %j1 = 0, 3 { ; Batch of GEMMs
-
         %tmp = subview %in_e[:,%j1,:] : memref<f32x3x3x3>
         %res = subview %wsp1[:,%j1,:] : memref<f32x3x3x4>
-
         gemm.n.n 1.0, %tmp, %basis0, 0.0, %res :
             f32, memref<f32x3x3,strided<1,9>>, memref<f32x3x4>, f32, memref<f32x3x4,strided<1,9>>;
     }
 
-    
     for %j2 = 0, 4 { ; Batch of GEMMs
         %tmp = subview %wsp1[:,:,%j2] : memref<f32x3x3x4>
         %res = subview %wsp2[:,%j2,:] : memref<f32x3x4x4>
-
         gemm.n.n 1.0, %tmp, %basis1, 0.0, %res :
             f32, memref<f32x3x3>, memref<f32x3x4>, f32, memref<f32x3x4,strided<1,12>>
     }
 
     for %j3 = 0, 4 { ; Batch of GEMV
         for %p3 = 0, 4 {
-        
             %tmp = subview %wsp2[:,%p3,%j3] : memref<f32x3x4x4>
             %res = subview %wsp3[:,%j3,%p3] : memref<f32x4x4x4>
-
             gemv.t 1.0, %basis2, %tmp, 0.0, %res :
                 f32, memref<f32x3x4>, memref<f32x3>, f32, memref<f32x4> 
         }
@@ -229,18 +209,15 @@ func @sum_factorization(%basis0: memref<f32x3x4>,
 
     %flat1 = fuse %J_e[0,2] : memref<f32x4x4x4>
     %flat2 = fuse %wsp3[0,2] : memref<f32x4x4x4>
-    %flat3 = fuse %wsp4[0,2] : memref<f32x4x4x4> ;  This one is probably redundant...
+    %flat3 = fuse %wsp4[0,2] : memref<f32x4x4x4>
 
     hadamard 1.0, %flat1, %flat2, 0.0, %flat3 :
         f32, memref<f32x64>, memref<f32x64>, f32, memref<f32x64>
 
-
     for %q6 = 0, 4 {                               ; Step 6
         for %p6 = 0, 4 {
-            
             %tmp = subview %wsp4[:,%q6,%p6] : memref<f32x4x4x4>
             %res = subview %wsp2[:,%p6,%q6] : memref<f32x3x4x4>
-             
             gemv.n 1.0, %basis2, %tmp, 0.0, %res :
                 f32, memref<f32x3x4>, memref<f32x4>, f32, memref<f32x3> 
         }
@@ -249,7 +226,6 @@ func @sum_factorization(%basis0: memref<f32x3x4>,
     for %p7 = 0, 4 {
         %tmp = subview %wsp2[:,%p7,:] : memref<f32x3x4x4>
         %res = subview %wsp1[:,:,%p7] : memref<f32x3x3x4>
-        
         gemm.n.t 1.0, %tmp, %basis1, 0.0, %res :
             f32, memref<f32x3x4,strided<1,12>>,memref<f32x3x4>, f32, memref<f32x3x3>
     }
@@ -264,18 +240,25 @@ func @sum_factorization(%basis0: memref<f32x3x4>,
 }
 \end{lstlisting}
 
-While functional, this kernel fails to obtain good performance for several reasons.
-One of several optimizations is fusing dimensions, to obtain larger GEMMs with a more favourable operation count. For for instance in step 1, the loop over GEMMs can be rewritten as a single GEMM.
+As the \texttt{alloca} instruction reserves temporary memory in shared local memory, TinyTC automatically inserts thread barriers between each of the six GEMM passes to ensure functional correctness. The kernel shown above only attained 10 GDoF/s on the Intel Ponte Vecchio GPU. One of several optimizations possible is fusing dimensions, to obtain larger GEMMs with a more favourable operation count. For instance in step 1 (the \texttt{j1}-loop), the loop over GEMMs can be rewritten as a single GEMM by fusing dimensions (Listing \ref{lst:tincytc_fuse}).
 
-\begin{lstlisting}[language=TensorIR,caption={BK1 using Tensor IR},basicstyle=\ttfamily\tiny]
+\begin{lstlisting}[language=TensorIR,caption={BK1 using Tensor IR},basicstyle=\ttfamily\small,
+                   label={lst:tinytc_fuse]
     %tmp1 = fuse %in_e[0,1] : memref<f32x9x3>
     %res1 = fuse %wsp1[0,1] : memref<f32x9x4,local>    
     gemm.n.n %c1, %tmp1, %basis0, %c0, %res1
 \end{lstlisting}
 
-Another possible optimization is related to SIMD execution and threading.
-To ensure correctness of the kernel when shared local memory is used, TinyTC is forced to insert barriers
-after each GEMM region, introducing unnecessary synchronization overhead. The naive kernel assigns multiple threads to cooperate on the evaluation of a single element. For lower order elements (N = 3, 5) this leads to sub-optimal use of the wide SIMD instructions.
+Other GEMM steps can be fused in a similar manner, however this only delivered a few percent improvement. Upon consultation with the TinyTC author it became apparent a different strategy would be needed to obtain performant execution and optimal SIMD utilization of the PVC architecture.
+In collaboration with Intel, we are currently investigating the application of index fusion, batch vectorization and memory layout transformations to make guarantee optimal register and SIMD usage.
+
+Despite these initial challenges, the use of a specialized tensor DSL offers numerous potential benefits including,
+\begin{itemize}
+\item Readability and maintenance: kernels are expressed in a high-level tensor operations rather than nested loops
+\item Hardware portability: TinyTC maps tensor operations to different architectures without rewriting kernels. Currently, this is portability is limited to Intel devices.
+\item Runtime specialization: kernels written in IR are ingested as strings for just-in-time compilation, allowing constant loop bounds for optimal looping and GEMM optimizations
+\item Optimized memory and SIMD usage: temporary arrays are automatically placed in shared local memory; cooperative matrix instructions can reduce synchronization overhead.
+\end{itemize}
 
 \section{Streaming Kernels}
 
