--- a/D3.2/D3.2_codesign.tex
+++ b/D3.2/D3.2_codesign.tex
@@ -20,6 +20,8 @@
     morecomment=[l]{\;},
 }
 
+% Block comment
+\newcommand{\mycomment}[1]{}
 
 % Set the deliverable number (without the D prefix, it's added automatically)
 \setdeliverableNumber{3.2}
@@ -84,26 +86,24 @@ Approval Date: [Date]
 
 \section{{Introduction}}
 
-This report describes advances in co-design, technology exploitation and energy efficiency.
+\mycomment{
+    % goals of the WP
+    \begin{itemize}
+        \item Investigate novel hardware and software solutions to leverage the latest advancements in high-performance computing
+    to achieve optimal performance
+        \item Identify and evaluate emerging technologies that can be exploited to enhance the capabilities of the exascale computing
+    system.
+        \item Explore and implement techniques to optimize energy consumption and power efficiency in the exascale computing
+    infrastructure.
+        \item Identify and address bottlenecks in the system to improve overall computational efficiency.
+    \end{itemize}
+}
 
-\begin{itemize}
-    \item Investigate novel hardware and software solutions to leverage the latest advancements in high-performance computing
-to achieve optimal performance
-    \item Identify and evaluate emerging technologies that can be exploited to enhance the capabilities of the exascale computing
-system.
-    \item Explore and implement techniques to optimize energy consumption and power efficiency in the exascale computing
-infrastructure.
-    \item Identify and address bottlenecks in the system to improve overall computational efficiency.
-\end{itemize}
-
-\subsection{{Purpose of the Document}}
-
-The objective of this document is to describe our ongoing co-design activies
-aimed at achieving optimal performance, energy efficiency and technology exploitation
-on novel hardware architectures.
+This report describes our advances investigating novel hardware and software solutions, and evaluating emerging technologies for exascale computing with the final goal of achieving state of art performance and optimal technology exploitation.
 
 Our main achievement in this period has been the preparation and analysis of benchmark kernels for the matrix-free application of discrete finite element operators, focused on addressing newer GPU architectures. 
-The benchmark repository can be found at: \url{https://github.com/dealii-X/benchmarks/}
+
+The benchmark repository is publically available at: \url{https://github.com/dealii-X/benchmarks/}
 
 The preparation of these benchmarks has been the focus of Milestone \#3 -- Public repository of benchmark sets for performance evaluation -- verified by means of runs of the software on at
 least three different accelerated platforms.
@@ -159,10 +159,45 @@ The benchmarks kernels form the algorithm core of the benchmark problems (BP), w
 
 The initial kernels have been implemented in three variants: 1) sequential kernels for verification, 2) using Kokkos Core, a C++ programming model for writing portable applications, part of the larger Kokkos C++ Performance Portability Programming Ecosystem \footnote{Kokkos,\url{https://kokkos.org}} and 3) using the CUDA Driver API. In order to evaluate the impact of parallelization strategies, the Kokkos and CUDA-based kernels have several sub-variants that use different thread-mapping strategies, i.e. the assignment of degrees-of-freedom and quadrature points to GPU threads.
 
-\subsection{CUDA Support}
-\subsection{SYCL Integration}
+\subsection{Kokkos}
+\subsection{CUDA}
 \subsection{OpenMP Offloading}
-\subsection{Kokkos Portability Framework}
+
+Since their introduction in OpenMP 4.5, offloading has become an integral component
+of the OpenMP programming framework.
+Adding OpenMP directives offloading to an existing code can be quite straightforward,
+assuming the right data structures and loop patterns are already in place.
+When using OpenMP for GPU offloading it is important to distinguish between two
+categories of directives, memory movement and work sharing.
+
+To provide fine-grained control over the hierarchical parallelism in terms of 
+teams and threads. The two main directives from this point of view are, `omp teams` and `omp parallel`, which can also be used to program in a SPMD-like mode (also called "me" mode). Typically however, there directives are combined with work-sharing
+constructs like `distribute`, `for` to control the parallelization of (nested) loops.
+A very useful work-sharing construct is the `loop` directive, which provides 
+a descriptive form of parallelism, which is slightly less flexible.
+The advantage is the precise assignment of the loop iteration space to teams and threads is left to the compiler. 
+As explained by Deakin \& Mattson, this kind of descriptiveness provides
+superior performance portability, assuming the compilers succeeds to auto-parallelize
+the loop well.
+
+\begin{lstlisting}[language=C++,caption={Simple C++ hello world},label={lst:cpp-hello}]
+#pragma omp target \
+    map(to: basis0[:nm0*nq0], basis1[:nm1*nq1], basis2[:nm2*nq2]) \
+    map(to: in[:nelmt*nm0*nm1*nm2], JxW[:nelmt*nq0*nq1*nq2]) \
+    map(from: out[:nelmt*nm0*nm1*nm2])
+#pragma omp teams loop
+for(size_t e = 0; e < nelmt; ++e) {
+    /* ... sum factorization ... */
+}
+\end{lstlisting}
+
+In figure X we show the parallelization of the BK1 algortihm using the \texttt{omp loop} directives. First we open a `target` region, instructing the compiler to generate
+device code for the upcoming region/scope. The `map` clauses are used to communicate the
+array sizes and avoid unnecessary memory movement.
+For this particular kernel the simpler `omp loop` directive would also work, but here we wanted
+to emphasize the assigment of elements to individual teams.
+
+
 \subsection{Tiny Tensor Compiler}
 
 \label{sec:tinytc}
@@ -171,7 +206,7 @@ The Tiny Tensor Compiler (TinyTC) is an open-source tensor compiler developed by
 
 Domain-specific languages (DSLs) provide abstraction and performance portability by expressing operations in a form closer to the mathematical problem rather than low-level loops. In recent years, DSLs such as FreeFem++ or FEniCS UML allow variational forms to be compiled into optimized C or LLVM IR. Similarly, TinyTC aims to represent tensor operations, representing multi-dimensional contractions, fusions, and GEMMs in a dedicated tensor language, but remains unaware of finite element specifics.
 
-Our first test of TinyTC aims to accelerate the finite element mass matrix evaluation (BK1) using sum factorization. As a first demonstration of tensor language we present the BK1 kernel using algorithm presented by Świrydowicz et al. (2019), see Listing \ref{lst:tinytc}, where each tensor product is implemented using the loop over GEMM approach. For simplicity the implementation uses four temporary arrays \texttt{wsp0}-\texttt{wsp4} are allocated in local work-group storage.
+Our first test of TinyTC aims to accelerate the finite element mass matrix evaluation (BK1) using sum factorization. As a first demonstration of tensor language we present the BK1 kernel using an algorithm presented by Świrydowicz et al. (2019), see Listing \ref{lst:tinytc}, where each tensor product is implemented using the loop over GEMM approach. For simplicity the implementation uses four temporary arrays, \texttt{wsp0}-\texttt{wsp4}, allocated in group local storage.
 
 \begin{lstlisting}[language=TensorIR,caption={BK1 using Tensor IR},basicstyle=\ttfamily\tiny,
                    label={lst:tinytc}]
@@ -250,7 +285,10 @@ func @sum_factorization(%basis0: memref<f32x3x4>,
 }
 \end{lstlisting}
 
-As the \texttt{alloca} instruction reserves temporary memory in shared local memory, TinyTC automatically inserts thread barriers between each of the six GEMM passes to ensure functional correctness. The kernel shown above only attained 10 GDoF/s on the Intel Ponte Vecchio GPU. One of several optimizations possible is fusing dimensions, to obtain larger GEMMs with a more favourable operation count. For instance in step 1 (the \texttt{j1}-loop), the loop over GEMMs can be rewritten as a single GEMM by fusing dimensions (Listing \ref{lst:tincytc_fuse}).
+As the \texttt{alloca} instruction reserves temporary memory in shared local memory, TinyTC automatically inserts thread barriers between each of the six GEMM passes to ensure functional correctness. 
+The kernel shown above achieved 10 GDoF/s on the Intel Ponte Vecchio GPU, roughly one quarter of the performance we observed using OpenMP. 
+One of several optimizations possible is fusing dimensions, to obtain larger GEMMs with a more favourable operation count. 
+For instance in step 1 (the \texttt{j1}-loop), the loop over GEMMs can be rewritten as a single GEMM by fusing dimensions (Listing \ref{lst:tincytc_fuse}).
 
 \begin{lstlisting}[language=TensorIR,caption={BK1 using Tensor IR},basicstyle=\ttfamily\small,
                    label={lst:tinytc_fuse}]
@@ -260,7 +298,7 @@ As the \texttt{alloca} instruction reserves temporary memory in shared local mem
 \end{lstlisting}
 
 Other GEMM steps can be fused in a similar manner, however this only delivered a few percent improvement. Upon consultation with the TinyTC author it became apparent a different strategy would be needed to obtain performant execution and optimal SIMD utilization of the PVC architecture.
-In collaboration with Intel, we are currently investigating the application of index fusion, batch vectorization and memory layout transformations to make guarantee optimal register and SIMD usage.
+In collaboration with Intel, we are currently investigating the application of index fusion, batch vectorization and memory layout transformations to guarantee optimal register and SIMD usage.
 
 Despite these initial challenges, the use of a specialized tensor DSL offers numerous potential benefits including,
 \begin{itemize}
@@ -270,57 +308,8 @@ Despite these initial challenges, the use of a specialized tensor DSL offers num
 \item Optimized memory and SIMD usage: temporary arrays are automatically placed in shared local memory; cooperative matrix instructions can reduce synchronization overhead.
 \end{itemize}
 
-\section{Streaming Kernels}
-
-Iterative linear system solvers make heavy use of low arithmetic intensity operations, so called streaming operations.
-When matrix-free high-order FEM schemes are combined with iterative solvers. 
-Kronbichler et al. \cite{kronbichler2023} have shown previously on an example of the conjugate gradient method, that above a certain problem size, the streaming operations contribute a significant chunk of the run-time.
-
-In this section we present some preliminary results on the performance and portability of
-streaming operations implemented using different frameworks on CPU and GPU architectures.
-
-\subsection{Kokkos}
 
 
-
-\subsection{OpenMP Offloading}
-
-Since their introduction in OpenMP 4.5, offloading has become an integral component
-of the OpenMP programming framework.
-Adding OpenMP directives offloading to an existing code can be quite straightforward,
-assuming the right data structures and loop patterns are already in place.
-When using OpenMP for GPU offloading it is important to distinguish between two
-categories of directives, memory movement and work sharing.
-
-To provide fine-grained control over the hierarchical parallelism in terms of 
-teams and threads. The two main directives from this point of view are, `omp teams` and `omp parallel`, which can also be used to program in a SPMD-like mode (also called "me" mode). Typically however, there directives are combined with work-sharing
-constructs like `distribute`, `for` to control the parallelization of (nested) loops.
-A very useful work-sharing construct is the `loop` directive, which provides 
-a descriptive form of parallelism, which is slightly less flexible.
-The advantage is the precise assignment of the loop iteration space to teams and threads is left to the compiler. 
-As explained by Deakin \& Mattson, this kind of descriptiveness provides
-superior performance portability, assuming the compilers succeeds to auto-parallelize
-the loop well.
-
-\begin{lstlisting}[language=C++,caption={Simple C++ hello world},label={lst:cpp-hello}]
-#pragma omp target \
-    map(to: basis0[:nm0*nq0], basis1[:nm1*nq1], basis2[:nm2*nq2]) \
-    map(to: in[:nelmt*nm0*nm1*nm2], JxW[:nelmt*nq0*nq1*nq2]) \
-    map(from: out[:nelmt*nm0*nm1*nm2])
-#pragma omp teams loop
-for(size_t e = 0; e < nelmt; ++e) {
-    /* ... sum factorization ... */
-}
-\end{lstlisting}
-
-In figure X we show the parallelization of the BK1 algortihm using the \texttt{omp loop} directives. First we open a `target` region, instructing the compiler to generate
-device code for the upcoming region/scope. The `map` clauses are used to communicate the
-array sizes and avoid unnecessary memory movement.
-For this particular kernel the simpler `omp loop` directive would also work, but here we wanted
-to emphasize the assigment of elements to individual teams.
-
-The OpenMP model encourages programmers to focus on correctness of the
-(sequential) algorithm first.
 
 \begin{figure}[htbp]
   \centering
@@ -374,6 +363,17 @@ The OpenMP model encourages programmers to focus on correctness of the
   \caption{BK1 performance for variable kernel, $q = 4$, Intel Max Series 1550 GPU (Ponte Vecchio).}
   \label{fig:pvc_dynamic}
 \end{figure}
+
+\section{Streaming Kernels}
+
+Iterative linear system solvers make heavy use of low arithmetic intensity operations, so called streaming operations.
+When matrix-free high-order FEM schemes are combined with iterative solvers. 
+As shown previously by Kronbichler et al. \cite{kronbichler2023} on the case of the conjugate gradient method, above a certain problem size the streaming operations contribute a significant chunk of the run-time.
+
+In this section we present some preliminary results on the performance and portability of
+streaming operations implemented using different frameworks on CPU and GPU architectures.
+
+% FIXME
 
 
 \section{Energy Efficiency}
