Try to avoid moving the funding statement too far down, as D2.2 did

--- a/common/deliverable.sty
+++ b/common/deliverable.sty
@@ -54,11 +54,11 @@
     
     \centering
 
-    \vspace{2cm}
+    \vfill
 
     \includegraphics[width=0.3\textwidth]{logos/dealii-x_logo.jpeg} % Project logo
 
-    \vspace{0.8cm}
+    \vfill
   % \normalize
   \centering
   \begin{textblock}{11}(0.1,1.2)  % Adjust the width and position
@@ -72,6 +72,7 @@
       \end{minipage}
     }
   \end{textblock}
+  \vfill
   \end{titlepage}
 }
 
